--- a/s4e-web/src/scss/_map.scss
+++ b/s4e-web/src/scss/_map.scss
@@ -248,7 +248,7 @@
 }
 
 #map {
-  position: absolute;
+  position: fixed;
   top: 0;
   bottom: 0;
   z-index: 0;
