--- a/s4e-web/src/scss/_timeline.scss
+++ b/s4e-web/src/scss/_timeline.scss
@@ -1,5 +1,5 @@
 .timeline {
-  position: absolute;
+  position: fixed;
   z-index: 2;
   width: calc(100% - 390px);
   bottom: 0;
